--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap')
 :root {
-    --cor-de-fundo: #1E1E1E;
+    --cor-de-fundo: #CBB699;
     --verde: #6FFF57;
     --branco: #FFFFFF;
     --botao-ativo: #3A375E;
     --botao-inativo: rgba(58, 55, 94, 0.5);
     --texto-fundo: rgba(58, 55, 94, 0.3);
 }
+</style>
