--- a/style.css
+++ b/style.css
@@ -10,11 +10,14 @@
 }
 
 body {
-    background-color: var(--cor-de-fundo);
+    background-color: var(--cor-de-fundo);;
     color: var(--branco);
     font-family: 'Chakra Petch', sans-serif;
 }
 .conteudo-principal{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px
 }
